feat: add port separation for log ingestion and move queue UI to Health
Port Separation:
- Expose port 8001 for direct log ingestion (bypasses nginx)
- Port 8000 continues serving main API (auth, rules, GUI)
- Added LOG_WORKERS env variable for log ingestion workers
- Production: 4 workers on 8000, 2 workers on 8001
- Development: both ports active with hot reload on 8000

UI Refactoring:
- Moved Queue Statistics and Dead Letter Queue cards from Settings to Health
- Settings → Queue tab now contains only configuration
- Health page shows queue monitoring with collapsible sections
- Added dead letter message management to Health page

Both ports validate API keys and IP whitelisting via the same
validate_log_shipping_token() code path.

--- a/.env.example
+++ b/.env.example
@@ -25,8 +25,10 @@ APP_URL=https://chad.example.com
 CHAD_SSO_ONLY=false
 
 # Scaling Configuration
-# Number of uvicorn workers for the backend API
+# Number of uvicorn workers for the backend API (port 8000)
 UVICORN_WORKERS=4
+# Number of uvicorn workers for direct log ingestion (port 8001)
+LOG_WORKERS=2
 # Number of queue worker replicas (production only)
 WORKER_REPLICAS=2
 
