--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,14 @@ services:
 
   backend:
     image: ghcr.io/terrifiedbug/chad/chad-backend:${VERSION:-latest}
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --workers ${UVICORN_WORKERS:-4}
+    ports:
+      - "8001:8001"  # Direct log ingestion (bypass nginx)
+    command: >
+      sh -c "
+      uvicorn app.main:app --host 0.0.0.0 --port 8000 --workers ${UVICORN_WORKERS:-4} &
+      uvicorn app.main:app --host 0.0.0.0 --port 8001 --workers ${LOG_WORKERS:-2} &
+      wait
+      "
     environment:
       # Database
       - POSTGRES_HOST=postgres
