feat(ci): add manual workflow dispatch with custom tag support
Add ability to manually trigger Docker builds from any branch with a
custom tag (defaults to 'dev'). Useful for testing feature branches
in production-like environments without creating a release.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,6 +7,11 @@ on:
   pull_request:
     branches: [main]
   workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Custom tag for images (e.g., dev, staging)'
+        required: false
+        default: 'dev'
 
 env:
   REGISTRY: ghcr.io
@@ -190,6 +195,7 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=sha,prefix=
             type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=${{ inputs.tag }},enable=${{ inputs.tag != '' }}
 
       - name: Extract metadata for backend
         id: meta-backend
@@ -202,6 +208,7 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=sha,prefix=
             type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=${{ inputs.tag }},enable=${{ inputs.tag != '' }}
 
       - name: Create and push frontend multi-arch manifest
         env:
