feat: comprehensive backup/import improvements and access control fixes
Export/Import (schema v3.0):
- Fix import bug: remove invalid 'last_edited_by' field
- Add rule threshold alerting fields (enabled, count, window, group_by)
- Add rule snooze fields (snooze_until, snooze_indefinite)
- Add rule SigmaHQ metadata (sigmahq_path, sigmahq_type)
- Add correlation rule fields (entity_field_type, snooze fields)
- Add index pattern health thresholds and enrichment config
- Add JiraConfig export/import (excluding API token)
- Add HealthAlertSuppression export/import
- Improve settings filter with explicit exclusion list
- Handle AI and SSO settings with credential stripping

Access control:
- Allow all authenticated users to view Health page monitoring
- Keep dead letter queue actions admin-only
- Allow analysts with manage_sigmahq permission to sync MITRE ATT&CK

Infrastructure:
- Add --loglevel warning to Redis to suppress background save logs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
   redis:
     image: redis:7-alpine
     restart: unless-stopped
-    command: redis-server --maxmemory 512mb --maxmemory-policy allkeys-lru --appendonly yes
+    command: redis-server --maxmemory 512mb --maxmemory-policy allkeys-lru --appendonly yes --loglevel warning
     volumes:
       - redis_data:/data
     healthcheck:
