feat: production scaling improvements and UX enhancements (#76)

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,53 @@
-# Database
-POSTGRES_PASSWORD=your-secure-password-here
+# CHAD Environment Variables
+# Copy to .env and fill in required values
 
-# JWT
-JWT_SECRET_KEY=your-random-secret-key-here
+# =============================================================================
+# REQUIRED - Must be set for production
+# =============================================================================
 
-# Fernet Key
-CHAD_ENCRYPTION_KEY=your-random-secret-key-here
+# Database password (use a strong random password)
+POSTGRES_PASSWORD=
 
-# Application
-# Public URL where CHAD is accessible
-# Used for: CSRF validation, webhook URLs, SSO redirects, email links
-# Example: https://chad.example.com
-APP_URL=https://chad.example.com
+# Security keys (generate with: openssl rand -base64 32)
+JWT_SECRET_KEY=
+SESSION_SECRET_KEY=
+CHAD_ENCRYPTION_KEY=
 
-# SSO-Only Authentication Mode (optional)
-# Set to true to disable local login and require SSO authentication
-# When enabled, users must sign in via SSO (configured in GUI → Settings)
-# Default: false (both local and SSO login available)
-CHAD_SSO_ONLY=false
+# =============================================================================
+# OPTIONAL - Have sensible defaults
+# =============================================================================
+
+# Image version (default: latest)
+# VERSION=latest
+
+# Worker scaling
+# UVICORN_WORKERS=4      # API workers
+# LOG_WORKERS=2          # Log ingestion workers
+# WORKER_REPLICAS=2      # Queue processing workers
+
+# Database connection pool
+# DATABASE_POOL_SIZE=20
+# DATABASE_MAX_OVERFLOW=40
+
+# Application URL (for webhooks, SSO redirects)
+# APP_URL=http://localhost
+
+# Logging (DEBUG, INFO, WARNING, ERROR, CRITICAL)
+# LOG_LEVEL=warning
+
+# SSO-only mode (disable local login)
+# CHAD_SSO_ONLY=false
+
+# =============================================================================
+# ADVANCED - Rarely need to change
+# =============================================================================
+
+# Redis URL (default uses compose service)
+# REDIS_URL=redis://redis:6379
+
+# Host header validation (comma-separated)
+# ALLOWED_HOSTS=example.com,api.example.com
+
+# Postgres logging
+# POSTGRES_LOG_LEVEL=warning
+# POSTGRES_LOG_CHECKPOINTS=off
