fix: suppress WebSocket 101 status from nginx access logs

--- a/frontend/nginx-logging.conf
+++ b/frontend/nginx-logging.conf
@@ -2,5 +2,6 @@
 # This reduces log noise from successful health checks and API calls
 map $status $loggable {
     ~^[23]  0;   # Don't log 2xx and 3xx (success/redirect)
+    101     0;   # Don't log WebSocket upgrades (successful connection)
     default 1;   # Log everything else (4xx, 5xx errors)
 }
