--- a/docker-compose.pull.yml
+++ b/docker-compose.pull.yml
@@ -2,7 +2,7 @@
 #
 # This configuration runs CHAD in pull-only mode, which:
 # - Queries OpenSearch on a schedule instead of receiving pushed logs
-# - Does not require Redis or worker processes
+# - Does not require worker processes (scheduler runs in-process)
 # - Has a smaller resource footprint
 #
 # Usage:
@@ -11,6 +11,18 @@
 # For hybrid push+pull mode, use the standard docker-compose.yml instead.
 
 services:
+  redis:
+    image: redis:7-alpine
+    restart: unless-stopped
+    command: redis-server --maxmemory 256mb --maxmemory-policy allkeys-lru --appendonly yes --loglevel warning
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   postgres:
     image: postgres:16-alpine
     environment:
@@ -39,6 +51,8 @@ services:
       - POSTGRES_DB=chad
       - DATABASE_POOL_SIZE=${DATABASE_POOL_SIZE:-10}
       - DATABASE_MAX_OVERFLOW=${DATABASE_MAX_OVERFLOW:-20}
+      # Redis (for caching and scheduler)
+      - REDIS_URL=${REDIS_URL:-redis://redis:6379}
       # Pull-only mode (disables push features)
       - CHAD_MODE=pull
       # Security (REQUIRED - must be set in production)
@@ -54,6 +68,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      redis:
+        condition: service_healthy
     volumes:
       - chad_data:/data
 
@@ -66,4 +82,5 @@ services:
 
 volumes:
   pgdata:
+  redis_data:
   chad_data:
