feat: add rate limiting for API key authentication
Implement Redis-based rate limiting for API key requests to protect
the backend from abuse. Each API key has a separate rate limit.

- Add api_rate_limit service with sliding window rate limiting
- Integrate rate limiter into API key authentication dependency
- Make rate limit configurable via API_KEY_RATE_LIMIT env var
- Default limit: 100 requests per minute per API key
- Fail-open behavior if Redis is unavailable
- Rate limit only affects /api/external/* endpoints
- Regular user sessions are not rate limited
- Add comprehensive test coverage

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,9 @@ CHAD_ENCRYPTION_KEY=
 # SSO-only mode (disable local login)
 # CHAD_SSO_ONLY=false
 
+# API Key Rate Limiting (requests per minute per key)
+# API_KEY_RATE_LIMIT=100
+
 # =============================================================================
 # ADVANCED - Rarely need to change
 # =============================================================================
