chore: exclude test paths from CodeQL analysis
Add paths-ignore for test and development tool directories:
- backend/tests/** - unit tests
- backend/scripts/** - dev/test scripts
- frontend test files (*.test.ts, *.test.tsx)
- tools/** - development mock servers and utilities

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -37,6 +37,11 @@ jobs:
           config: |
             paths-ignore:
               - backend/alembic/versions/**
+              - backend/tests/**
+              - backend/scripts/**
+              - frontend/src/**/*.test.ts
+              - frontend/src/**/*.test.tsx
+              - tools/**
 
       - name: Autobuild
         uses: github/codeql-action/autobuild@v4
